--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>test</title>
+        <title>xkicdt blog</title>
+        <meta charset="utf-8">
     </head>
     <body>
-        <hl>Hello world</hl>
+        <1>写点什么呢?</1>
     </body>
 </html>
