--- a/article/2021.2.10/关于企业级Linux(上).html
+++ b/article/2021.2.10/关于企业级Linux(上).html
@@ -36,12 +36,12 @@
             <h2>红帽与上游的关系</h2>
             <p>首先得说，由于红帽技术力量较强，很多东西都是他们自己开发的，所以自己担当了很多软件的上游。还有其它上游，红帽对待这些软件的态度是尽量减少改动，不用最新版本，也不能用太旧版本，尽量用[上个稳定版]，这就保证了软件经过很多测试，稳定性能保证，也不会太老，至少不像CentOS那样老。</p>
             <h2>红帽与社区的关系</h2>
-            <p>1.Fedora
-            红帽是开源公司，他们把Red Hat Linux的代码开源，一些人编译出了Fedora。现在Fedora因为它的[新、快]被很多人使用，也建立了庞大的社区。红帽当然不能放过这么好的机会，直接成为了Fedora的[赞助商]。实际上是高压控制，把Fedora当成了红帽新技术的试验田。但是红帽是个开源公司，做出来的东西都是要开源的，所以这些代码也相当于给社区做了贡献。[我给社区做贡献，社区帮我赚大钱]说的就是这个。
-            2.RHEL
-            RHEL的社区不大，大客户根本没有到社区问问题、瞎扯淡的，RHEL社区全是开发者订阅那帮人。
-            3.CentOS
-            从CentOS要停止支持这一件事看出，红帽是想搞死CentOS的，当年的[招安]最终目的就是这个，让CentOS处于高压控制下，就跟冷战时期苏联对东欧国家所做的事一样。因为CentOS和RHEL业务范围起了冲突，所以CentOS必须死。但是红帽毕竟是个商业公司，资本家要[利益最大化]，要压榨出[全部利益]，所以CentOS虽是死了，但是仍然被压榨，CentOS的主线要停止支持，但是CentOS Stream没有停止啊，红帽要用CentOS Stream作为Fedora和RHEL之间的那层，让RHEL多一层试验田，好让更多人朝着[稳定]这一优点买RHEL的订阅。而Fedora，现在只借用RHEL的底层，连内核都重新设置了编译选项，让它变得更快了，所以Fedora也是红帽在桌面领域对抗Ubuntu的权宜之策。这种东西给了资本家带来了利益，所以Fedora社区是红帽做了很多贡献的。红帽的社区观，一直是跟着资本走的。</p>
+            <h3>1.Fedora</h3>
+            <p>红帽是开源公司，他们把Red Hat Linux的代码开源，一些人编译出了Fedora。现在Fedora因为它的[新、快]被很多人使用，也建立了庞大的社区。红帽当然不能放过这么好的机会，直接成为了Fedora的[赞助商]。实际上是高压控制，把Fedora当成了红帽新技术的试验田。但是红帽是个开源公司，做出来的东西都是要开源的，所以这些代码也相当于给社区做了贡献。[我给社区做贡献，社区帮我赚大钱]说的就是这个。</p>
+            <h3>2.RHEL</h3>
+            <p>RHEL的社区不大，大客户根本没有到社区问问题、瞎扯淡的，RHEL社区全是开发者订阅那帮人。</p>
+            <h3>3.CentOS</h3>
+            <p>从CentOS要停止支持这一件事看出，红帽是想搞死CentOS的，当年的[招安]最终目的就是这个，让CentOS处于高压控制下，就跟冷战时期苏联对东欧国家所做的事一样。因为CentOS和RHEL业务范围起了冲突，所以CentOS必须死。但是红帽毕竟是个商业公司，资本家要[利益最大化]，要压榨出[全部利益]，所以CentOS虽是死了，但是仍然被压榨，CentOS的主线要停止支持，但是CentOS Stream没有停止啊，红帽要用CentOS Stream作为Fedora和RHEL之间的那层，让RHEL多一层试验田，好让更多人朝着[稳定]这一优点买RHEL的订阅。而Fedora，现在只借用RHEL的底层，连内核都重新设置了编译选项，让它变得更快了，所以Fedora也是红帽在桌面领域对抗Ubuntu的权宜之策。这种东西给了资本家带来了利益，所以Fedora社区是红帽做了很多贡献的。红帽的社区观，一直是跟着资本走的。</p>
         </article>
     </body>
 </html>
