--- a/article/2021.2.11/PowerShell.html
+++ b/article/2021.2.11/PowerShell.html
@@ -39,7 +39,7 @@
             <p>使用Get-Command不加参数，会列出所有可用命令</p>
             <p>PowerShell自带了一个[管道]，它比bash的管道强大多了，*nix shell只有Elvish能与它媲美。</p>
             <h2>PowerShell社区</h2>
-            <h4>PowerShell是开源的。</h4><p>这就代表它有一个社区。<a href="https://github.com/microsoft/powershell">项目地址</a>。这个社区很活跃，每天有源源不断的代码贡献。而且它不仅仅有Windows平台的版本，还有Linux平台的版本。</p>
+            <h4>PowerShell是开源的。</h4><p>这就代表它有一个社区。<a href="https://github.com/microsoft/powershell">项目地址</a>.这个社区很活跃，每天有源源不断的代码贡献。而且它不仅仅有Windows平台的版本，还有Linux平台的版本。</p>
         </article>
     </body>
 </html>
