--- a/article/about.html
+++ b/article/about.html
@@ -23,7 +23,7 @@
             <h1>关于xkicdt</h1>
             <p>我只学了不到一个小时的html，所以网页做的简单也请原谅。</p>
             <h2>生平</h2>
-            <p>我于2006年出生于中国东北的一个小城市（具体来说是吉林省吉林市），现在上初三。从2009年开始接触计算机，那时麻花疼的QQ农场还流行，家里用着Windows XP，我就天天看着父亲偷菜，母亲玩连连看。后来我觉得这很没意思，就瞎搞家里的电脑。之后的2012年我上了小学，从那时起我家的机器送人了，从亲戚那低价买来了一台iMac，2009年末的21.5英寸，Core2+HD4670。之后因为学习紧，就没再碰。到了2016年，我在一次故障重启后进入了之前的Mac OS X，我被这美工惊艳到了，又接触到了那Unix Shell，感觉比cmd强大得多。我就开始对Unix世界着迷，知道了Linux，并且开始用Ubuntu（现在在使用Windows 10 Home + openSUSE Leap 15.2）。之后我得知Kali Linux，研究了之后发现用不上，就放弃了。</p>
+            <p>我于2006年出生于中国东北的一个小城市（具体来说是吉林省吉林市），现在上初三。从2009年开始接触计算机，那时麻花疼的QQ农场还流行，家里用着Windows XP，我就天天看着父亲偷菜，母亲玩连连看。后来我觉得这很没意思，就瞎搞家里的电脑。之后的2012年我上了小学，从那时起我家的机器送人了，从亲戚那低价买来了一台iMac，2009年末的21.5英寸，Core 2 Duo E7600 + ATi Radeon HD4670。之后因为学习紧，就没再碰。到了2016年，我在一次故障重启后进入了之前的Mac OS X，我被这美工惊艳到了，又接触到了那Unix Shell，感觉比cmd强大得多。我就开始对Unix世界着迷，知道了Linux，并且开始用Ubuntu（现在在使用Windows 10 Home + openSUSE Leap 15.2）。之后我得知Kali Linux，研究了之后发现用不上，就放弃了。</p>
             <h2>经济</h2>
             <p>我家比较穷，父亲辞职后以收房租为生，我这台Ryzen 3 3200U的机器都是上网课迫不得已才买的。我用了多年的盗版，终于入了正版的Microsoft 365。这是在MS官网上买的个人版，花了我差不多400块钱。这样，在精神层面我终于解脱，用盗版总觉得心里过意不去，总觉得这东西这么好用，不给微软钱，就是没良心。但我毕竟是个穷学生，总觉得这太奢侈，所以我得写点东西，用它创造更多价值，把网站托管在Github上，写点blog。</p>
             <h2>Windows</h2>
