--- a/article/about.html
+++ b/article/about.html
@@ -29,7 +29,7 @@
             <h2>Windows</h2>
             <p>我从2009-2016一直只在用Windows。Windows完美的图形界面和DX这种技术，令用户感受到了完美的图形体验。但是它并不自由，但是这并不影响使用，因为我只是一个初三学生。微软为Windows搭建的开发一条龙、办公一条龙是真的强，这个网页就是在VS Code下写的。Windows Server的运维到大街上随便拉一个就行，所以运维水平普遍低。砍掉了图形界面的Windows Server Core稳定性不比Linux差，至少比Ubuntu Server强，但是低质量运维导致了Windows不稳定的骂名，其实是低质量运维不想承认罢了。Windows也有脚本，比如*.cmd/*.vbs/*.bat，但是很少人用，只有高端用户才用。Windows不比Unix差，什么脚本、命令行操作都一应俱全，并且PowerShell还比多数Unix shell强大，但是会用的人少。</p>
             <h2>Linux</h2>
-            <p>自从2016年我步入Unix的世界开始，我就迷上了Linux。但是现在已处于退休状态，因为发行版之间的党政太严重，哪个发行版都有自己的优点，但是面对其他发行版的攻击得去反驳，还得在外面宣传来防止人口流失。这是一件很累的事。我最中意的发行版是openSUSE，它还有一个企业版叫SUSE Linux Enterprise。之所以为什么最中意它，请看这篇<a href="https://xkicdt.github.io/2021.2.11/article/关于企业级Linux.html">文章</a>。概括起来，就是因为它的稳定、发行版观念和Open Build Service。但是我现在主力在Windows，而且我也买了Microsoft 365的一年订阅，不能让这钱白费了。</p>
+            <p>自从2016年我步入Unix的世界开始，我就迷上了Linux。但是现在已处于退休状态，因为发行版之间的党政太严重，哪个发行版都有自己的优点，但是面对其他发行版的攻击得去反驳，还得在外面宣传来防止人口流失。这是一件很累的事。我最中意的发行版是openSUSE，它还有一个企业版叫SUSE Linux Enterprise。之所以为什么最中意它，请看这篇<a href="https://xkicdt.github.io/article/2021.2.11/关于企业级Linux.html">文章</a>。概括起来，就是因为它的稳定、发行版观念和Open Build Service。但是我现在主力在Windows，而且我也买了Microsoft 365的一年订阅，不能让这钱白费了。</p>
             <h2>C语言</h2>
             <p>之后觉得必须为openSUSE做点什么贡献，所以我开始学习C语言，在bilibili上看郝斌老师在2009年录的视频。不得不说，他讲的太好了，我全都听懂了，但由于没有时间（得写寒假作业）所以没听完，现在听到函数了。结果，我现在只能写简单的命令行交互程序，什么大事干不了，例如贡献内核。</p>
             <h2>这个站主要做什么</h2>
