--- a/article/2021.2.11/关于企业级Linux.html
+++ b/article/2021.2.11/关于企业级Linux.html
@@ -22,7 +22,7 @@
     </head>
     <body>
         <article>
-            <h1>关于企业级Linux(上)</h1>
+            <h1>关于企业级Linux</h1>
             <h5>总述</h5>
             <p>从2005年开始，SUSE与红帽的战争就没停过。这很不利于Linux社区，因为它们都是技术巨头。Canonical没什么技术，对于Debian社区就是吸血者，用商业宣传得到了那么多市场份额，这点到后面会讲。这篇文章主要分析这些巨头发行版的商业模式。</p>
             <h2>关于红帽</h2>
